Fix bug 314343.  Patch by Martijn Wargers <martijn.martijn@gmail.com>, r=sicking, sr=bzbarsky.